[WIP] Fixed spacing [DEL] Removed logo

--- a/src/SingleProjectOverview.css
+++ b/src/SingleProjectOverview.css
@@ -1,10 +1,17 @@
 .container {
     width: 80%;
     margin: 40px auto;
+    align-content: center;
 }
 
-.formgroup {
-    width: 33%;
+.Projectgroupside {
+    width: 25%;
+    padding: 20px;
+    align-content: center;
+}
+
+.projectgroupcenter {
+    width: 50%;
     padding: 20px;
     align-content: center;
 }
